--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,9 @@
   <head>
     <title>You through me</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+<!--    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
+    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <link type="text/css" rel="stylesheet" href="css/main.css">
 
   <script type="importmap">
