--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,26 @@
     <title>You through me</title>
     <meta charset="utf-8">
 <!--    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"> -->
-    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <script type='text/javascript' charset='utf-8'>
+        // Hides mobile browser's address bar when page is done loading.
+          window.addEventListener('load', function(e) {
+            setTimeout(function() { window.scrollTo(0, 1); }, 1);
+          }, false);
+
+          document.addEventListener("orientationchange", function(event){
+              switch(window.orientation) 
+              {  
+                  case -90: case 90:
+                      /* Device is in landscape mode */
+                      break; 
+                  default:
+                      /* Device is in portrait mode */
+              }
+          });
+    </script>
 
     <link type="text/css" rel="stylesheet" href="css/main.css">
 
